--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 - I compared different regressor models: SVR, Decision Tree and Random Forest Regressor to analyze which model has the prediction power considering the 'Position_Salaries.csv'
 - I did not applied any tuning hyperparameters, it's using the default parameters. The intention is to analyze the 'raw performance' of each algorithm
 - For SVR model was applied FeatureScaling to standardize the data
+- In the end of each notebook, you can see the data visualization where we can see the regressor paths in the data points.
 
 Results:
 1st: SVR
